--- a/config.py.example
+++ b/config.py.example
@@ -22,6 +22,16 @@ bot_command="!vv"
 var_path="."
 
 log_path="video2voice.log"
+# how match keep backup log files:
+log_backup_count=30
+# can be:
+# 'S' - Seconds
+# 'M' - Minutes
+# 'H' - Hours
+# 'D' - Days
+# 'W0'-'W6' - Weekday (0=Monday)
+# 'midnight' - Roll over at midnight
+log_backup_when='midnight'
 
 debug=True
 
